--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/react-types": "^2.0.6",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@tanstack/react-query": "^4.32.6",
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/multer": "^1.4.7",
